objects/NVMStatsSF__NVM_Outbound_CDR__c.object
<CustomObject>
    <fields>
        <fullName>NVMStatsSF__AgentId__c</fullName>
        <label>AgentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__AppletName__c</fullName>
        <label>AppletName</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__RingDuration__c</fullName>
        <label>RingDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__TelNum__c</fullName>
        <label>TelNum</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Unique_CallId__c</fullName>
        <label>CallId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>NVM Outbound CDR</label>
    <listViews>
        <fullName>NVMStatsSF__All</fullName>
        <columns>NAME</columns>
        <columns>NVMStatsSF__AgentId__c</columns>
        <columns>NVMStatsSF__Duration__c</columns>
        <columns>NVMStatsSF__RingDuration__c</columns>
        <columns>NVMStatsSF__Time__c</columns>
        <columns>NVMStatsSF__AppletName__c</columns>
        <columns>NVMStatsSF__State__c</columns>
        <columns>NVMStatsSF__TelNum__c</columns>
        <columns>NVMStatsSF__Unique_CallId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OCDR-{000000000}</displayFormat>
        <label>NVM Outbound CDR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Outbound CDRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>